Aress7/src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Contractor Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Awaiting Schedule</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Install Complete</fullName>
        </values>
        <values>
            <fullName>Install Scheduled</fullName>
        </values>
        <values>
            <fullName>Install Verified</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Paused</fullName>
        </values>
        <values>
            <fullName>Survey Approved</fullName>
        </values>
        <values>
            <fullName>Survey Complete</fullName>
        </values>
        <values>
            <fullName>Survey Quoted</fullName>
        </values>
        <values>
            <fullName>Survey Scheduled</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Fieldaware Case</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Commissioned</fullName>
        </values>
        <values>
            <fullName>Install Complete</fullName>
        </values>
        <values>
            <fullName>Install Scheduled</fullName>
        </values>
        <values>
            <fullName>Install Verified</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Paused</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Support Process</fullName>
        <description>Support Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Assigned</fullName>
        </values>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
        </values>
        <values>
            <fullName>Pending</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AM_PM__c</fullName>
        <label>AM/PM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aerial_View_2__c</fullName>
        <label>Aerial View 2</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Aerial_View__c</fullName>
        <label>Aerial View</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AnnexD_PartA_Resign_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annex D Part A Resign Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annex_D_Link__c</fullName>
        <label>Annex D - Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Annex_D_Part_A_Date__c</fullName>
        <label>Annex D Part A Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Annex_D__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annex D</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annex_I_Link__c</fullName>
        <label>Annex I - Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Annex_I__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annex I</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_Survey_Option_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Survey Option 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approve_Survey_Option_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approve Survey Option 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CC_Acc_Spend__c</fullName>
        <label>CC &amp; Acc Spend</label>
        <summarizedField>Case_Equipment__c.Spend_Total_Amount__c</summarizedField>
        <summaryForeignKey>Case_Equipment__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>COPS_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>COPS Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPD_Fee__c</fullName>
        <label>CPD Feedback</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cable_Management_Civils__c</fullName>
        <label>Cable Management &amp; Civils</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Call_Back_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Call Back Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Category__c</fullName>
        <label>Call Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Origin</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Homecharge</fullName>
                </value>
                <value>
                    <fullName>Support Issue</fullName>
                </value>
                <value>
                    <fullName>Support Enquiry</fullName>
                </value>
                <value>
                    <fullName>Other Dept. Enquiry</fullName>
                </value>
                <value>
                    <fullName>General Enquiry</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call_Subcategory__c</fullName>
        <label>Call Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Call_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Enquiry</fullName>
                </value>
                <value>
                    <fullName>Ops Enquiry</fullName>
                </value>
                <value>
                    <fullName>App</fullName>
                </value>
                <value>
                    <fullName>Home Unit</fullName>
                </value>
                <value>
                    <fullName>Commercial Unit</fullName>
                </value>
                <value>
                    <fullName>How to use Homecharge Unit</fullName>
                </value>
                <value>
                    <fullName>How to use Commercial Unit</fullName>
                </value>
                <value>
                    <fullName>Commercial Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Recruitment</fullName>
                </value>
                <value>
                    <fullName>PD/Ops</fullName>
                </value>
                <value>
                    <fullName>Charging</fullName>
                </value>
                <value>
                    <fullName>EVs</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Failed Call</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Dealership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Escalation_Date__c</fullName>
        <label>Case Escalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Level__c</fullName>
        <label>Case Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Notes__c</fullName>
        <label>Case Notes</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Owner__c</fullName>
        <formula>IF( BEGINS( OwnerId , &apos;00G&apos;) , &apos;Queue&apos;, &apos;User&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Board_Photo_Link__c</fullName>
        <label>Circuit Board Photo - Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Circuit_Board_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circuit Board Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Circuit_Chart_Photo_Link__c</fullName>
        <label>Circuit Chart Photo - Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Circuit_Chart_Photo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Circuit Chart Photo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Civil_Labour_2__c</fullName>
        <label>Civil Labour 2 (hrs)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Civil_Labour__c</fullName>
        <label>Civil Labour (hrs)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Reason__c</fullName>
        <label>Close Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>POD Point - Rescheduled</fullName>
                </value>
                <value>
                    <fullName>POD Point - Postpone</fullName>
                </value>
                <value>
                    <fullName>Customer - Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Customer - Postpone</fullName>
                </value>
                <value>
                    <fullName>Customer - No Longer Interested</fullName>
                </value>
                <value>
                    <fullName>Opportunity Closed</fullName>
                </value>
                <value>
                    <fullName>System Error</fullName>
                </value>
                <value>
                    <fullName>User Error</fullName>
                </value>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Test Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Car__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Company Car?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_On__c</fullName>
        <label>Completed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completed_within_allocated_time__c</fullName>
        <label>PPEs completed within allocated time?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Attempted__c</fullName>
        <label>Contact Attempted</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contingency_Budget__c</fullName>
        <formula>Contingency_Rate__c*(IF(ISPICKVAL(Quote_1_Chosen__c, &quot;1&quot;), Total_Cost__c, Total_Cost_2__c)/(1+Contingency_Rate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contingency Budget</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contingency_Pot__c</fullName>
        <formula>IF(Variance__c &lt; 0, (Contingency_Budget__c+Variance__c), Contingency_Budget__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contingency Pot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contingency_Rate__c</fullName>
        <defaultValue>0.1</defaultValue>
        <label>Contingency Rate</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Country_Picklist__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Future_Capacity_2__c</fullName>
        <label>Current Future Capacity 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Future_Capacity__c</fullName>
        <label>Current Future Capacity</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Step__c</fullName>
        <label>Current Step</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Confirmation__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>- Confirms all Scheduled Work Orders
- If a new WO is made it will untick
- Unticking on the Case manually does nothing</inlineHelpText>
        <label>Customer Confirmation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Contacted_by_Subcontractor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Contacted by Subcontractor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon__c</fullName>
        <formula>IF(   (TEXT( Customer_emoticon_value__c ) ==&quot;&quot;)  ,&quot;&quot; ,IMAGE( &quot;resource/pkb_mobile/imgs/&quot;+TEXT( Customer_emoticon_value__c ) +&quot;.png&quot; ,TEXT( Customer_emoticon_value__c )  ,20,20))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>How the customer was feeling when he enter the support case.</inlineHelpText>
        <label>Customer emoticon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_emoticon_value__c</fullName>
        <description>Store the emoticon as a text value.</description>
        <label>Customer emoticon value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>happy</fullName>
                </value>
                <value>
                    <fullName>confused</fullName>
                </value>
                <value>
                    <fullName>annoyed</fullName>
                </value>
                <value>
                    <fullName>frustrated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_When_Survey_Became_Quoted__c</fullName>
        <label>Survey Quoted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_When_Survey_Became_Scheduled__c</fullName>
        <label>Survey Became Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_COPS_Approved__c</fullName>
        <label>Date of COPS Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Tesco_Trial_At_Very_First_Time__c</fullName>
        <description>Store the date of the Tesco trial flag when it becomes true at very first time.</description>
        <label>Date of Tesco Trial At Very First Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dealership__c</fullName>
        <label>Dealership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demonstration_on_app_use__c</fullName>
        <description>You were given information of how the units work and how your customers can use our app?</description>
        <label>Explained how to use App?</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_Works_2__c</fullName>
        <label>Description of Works 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Works__c</fullName>
        <label>Description of Works</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Documents_Notes__c</fullName>
        <label>Documents Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Documents_Uploaded_Test__c</fullName>
        <formula>IF ((AND( AND( AND( AND( Annex_D__c = true, Proof_of_Ownership__c = true, Annex_I__c = true, MPAN__c = true, Company_Car__c = true ))))) , true, IF ((AND( AND( AND( Annex_D__c = true, Proof_of_Ownership__c = true, MPAN__c = true, Company_Car__c = false)))) , true, false))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Documents Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documents_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Documents Uploaded (old, not used)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Door_A_B__c</fullName>
        <label>Door A/B</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Counter__c</fullName>
        <label>Email Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Engineer_Bonus_percentage__c</fullName>
        <formula>IF( or(text(Installation_Star_Rating__c) =&quot;5&quot;,text(Installation_Star_Rating__c) =&quot;No Response&quot;), 0.5, 0) +  if(ISPICKVAL( Install_adequate_standard__c , &quot;Yes&quot;),0.25,0) + if(ISPICKVAL(  Completed_within_allocated_time__c  , &quot;Yes&quot;),0.25,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PPEs Bonus %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Engineer_s_Notes_1__c</fullName>
        <label>Engineer&apos;s Notes 1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engineer_s_Notes_2__c</fullName>
        <label>Engineer&apos;s Notes 2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engineer_s_achieved_5_star_bonus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Engineer(s) achieved 5 star bonus?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment_Cost__c</fullName>
        <label>Equipment Cost</label>
        <summarizedField>Case_Equipment__c.Total_Cost__c</summarizedField>
        <summaryForeignKey>Case_Equipment__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evidence_Rubbish_Removed__c</fullName>
        <label>Evidence Rubbish Removed</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FA_Job_Description__c</fullName>
        <label>FA Job Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieldAware_URL__c</fullName>
        <label>FieldAware URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GW_Adequate_Standard__c</fullName>
        <label>GWs completed to adequate standard?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GW_Bonus_Percentage__c</fullName>
        <formula>IF( or(text(Installation_Star_Rating__c) =&quot;5&quot;,text(Installation_Star_Rating__c) =&quot;No Response&quot;), 0.5, 0) + if(ISPICKVAL(  GW_Adequate_Standard__c  , &quot;Yes&quot;),0.25,0) + if(ISPICKVAL(   GW_Completed_Within_Time__c   , &quot;Yes&quot;),0.25,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GWs Bonus %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GW_Completed_Within_Time__c</fullName>
        <label>GWs completed within allocated time?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Google_Drive_Folder_Link__c</fullName>
        <description>Google Drive Folder Link</description>
        <label>Google Drive Folder Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Groundworks_Arrival_Window_End_Time__c</fullName>
        <description>Groundworks Arrival Window End Time</description>
        <label>Groundworks Arrival Window End Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Groundworks_Arrival_Window_Start_Time__c</fullName>
        <description>Groundworks Arrival Window Start Time</description>
        <label>Groundworks Arrival Window Start Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Groundworks_Scheduled_Start_Date_Time__c</fullName>
        <description>Groundworks Scheduled Start Date &amp; Time</description>
        <label>Groundworks Scheduled Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HasOptedIn_HAHBE__c</fullName>
        <formula>Account.HasOptedIn_HAHBE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Arrange HC By Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HasOptedIn_HAHBP__c</fullName>
        <formula>Account.HasOptedIn_HAHBP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Help Arrange HC By Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Arrival_Window_End_Time__c</fullName>
        <description>Install Arrival Window End Time</description>
        <label>Install Arrival Window End Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Arrival_Window_Start_Time__c</fullName>
        <description>Install Arrival Window Start Time</description>
        <label>Install Arrival Window Start Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Cost_Quote_2__c</fullName>
        <label>Total Install Cost 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Cost_Quote__c</fullName>
        <label>Total Install Cost 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Install_Cost_Rounded_1__c</fullName>
        <label>Total Labour Cost 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Cost_Rounded_2__c</fullName>
        <label>Total Labour Cost 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Install_Date_Deadline_Nissan_Only__c</fullName>
        <label>Install Date Deadline (Nissan Only)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Date__c</fullName>
        <formula>dateVALUE( Install_Scheduled_Start_Date_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Install Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Install_Description__c</fullName>
        <label>Install Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Install_Hours_2__c</fullName>
        <label>Labour 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Hours__c</fullName>
        <label>Labour 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Install_Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Godkjent tillatelse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Install_Scheduled_Start_Date_Time__c</fullName>
        <description>Install Scheduled Start Date &amp; Time</description>
        <label>Install Scheduled Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Install_Status__c</fullName>
        <inlineHelpText>FSL Install Work Order Status</inlineHelpText>
        <label>Install Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Install_adequate_standard__c</fullName>
        <label>PPEs completed to adequate standard?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Star_Rating__c</fullName>
        <description>Out of 5 stars, how would you rate your overall experience with Pod Point?</description>
        <label>Overall experience star rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>No Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installer_Email__c</fullName>
        <label>Installer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Installer_Name_Formula__c</fullName>
        <formula>Installer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer_Name__c</fullName>
        <label>Installer Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installer_Phone__c</fullName>
        <label>Installer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installer</label>
        <referenceTo>Installer__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsFeedbackMailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFeedbackMailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Vehicle_Leased__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Vehicle Leased?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <label>Job ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Strategic_Account__c</fullName>
        <formula>Account.Key_Strategic_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key Strategic Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Labour_Budget_Hrs__c</fullName>
        <formula>IF(ISPICKVAL(Quote_1_Chosen__c, &quot;1&quot;), Total_Labour__c,  Total_Labour_2__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labour Budget (Hrs)</label>
        <type>Text</type>
    </fields>
</CustomObject>